--- a/myapp/src/index.html
+++ b/myapp/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <head>
   <meta charset="utf-8">
   <title>Myangular</title>
